# nb-dashcam-tools

./: .gitignore  CMakeLists.txt  README.md  nb-dashcam-tools.iss  nb-dashcam-tools.spec
.github/docker/rpmpkg/: Dockerfile  entrypoint.sh
.github/workflows/: build.yml  package.yml  ubuntu.yml  winpkg.yml
doc/: camera-file-format.md
src/: clipmergewidget.cpp  clipmergewidget.hpp  clipmergewidget.ui  gpsexport.cpp  gpsexport.hpp  gpsexportwidget.cpp  gpsexportwidget.hpp  gpsexportwidget.ui  gpssampleparser.cpp  gpssampleparser.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mp4file.cpp  mp4file.hpp  toollocator.cpp  toollocator.hpp  version.rc.in
